--- a/Gwangju/Desgin/style.css
+++ b/Gwangju/Desgin/style.css
@@ -153,7 +153,7 @@ nav{
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.5);
-    display: block;
+    display: none;
 }
 
 .join_modal{
@@ -237,3 +237,65 @@ nav{
 }
 /* 회원가입 모달 */
 /* 헤더 영역 */
+/* Up comming 영역 */
+.visual{
+    width: 100%;
+    height: 850px;
+    overflow: hidden;
+}
+
+.slider{
+    width: 400%;
+    height: 100%;
+    display: flex;
+    position: relative;
+    animation: infinite linear 10s slider;
+}
+
+.slide{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.slide img{
+    width: 100%;
+    height: 100%;
+}
+
+.slide_txt{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: center;
+}
+
+.slide_txt h1{
+    font-size: 52px;
+}
+
+.slide_txt p{
+    font-size: 18px;
+}
+
+.slide button{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 150px;
+    height: 40px;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+@keyframes slider{
+    0%, 23%{left: 0;}
+    33%, 56%{left: -100%;}
+    66%, 90%{left: -200%;}
+    100%{left: -300%;}
+}
+/* Up comming 영역 */
