--- a/Gwangju/Desgin/style.css
+++ b/Gwangju/Desgin/style.css
@@ -299,3 +299,147 @@ nav{
     100%{left: -300%;}
 }
 /* Up comming 영역 */
+/* Best 축제 영역 */
+.best_festa_area{
+    width: 100%;
+    height: 900px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.best_festa_area h1{
+    position: absolute;
+    left: 240px;
+    top: 40px;
+}
+
+.best_festa{
+    margin-top: 100px;
+    width: 1440px;
+    height: 800px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.festa_card{
+    position: relative;
+    width: 690px;
+    height: 200px;
+    margin: 15px;
+    display: flex;
+}
+
+.festa_card img{
+    width: 220px;
+    height: 200px;
+    border-radius: 15px;
+}
+
+.title{
+    margin-top: 5px;
+}
+
+.title span{
+    padding: 5px;
+    background-color: #FF8484;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: 600;
+}
+
+.festa_card p{
+    padding: 10px;
+    font-weight: 600;
+}
+
+.festa_card button{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    border: 1px solid gray;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+.festa_card label{
+    display: block;
+}
+
+/* 축제 모달창 */
+.festa_modal_back{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 10;
+}
+
+.festa_modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    width: 1440px;
+    height: 600px;
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.festa_modal img{
+    width: 900px;
+    height: 600px;
+}
+
+.festa_modal_txt{
+    position: relative;
+    width: 520px;
+    height: 600px;
+    padding-left: 20px;
+}
+
+.festa_modal_txt label, .close_modal{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    display: block;
+}
+
+.festa_modal_txt h1{
+    margin-top: 120px;
+}
+
+.festa_modal_txt p{
+    padding: 5px;
+}
+
+.festa_modal_txt div{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.festa_modal_txt > div > button{
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #FF8484;
+    color: #fff;
+    border: none;
+}
+
+#festa:checked~.festa_modal_back{
+    display: block;
+}
+/* 축제 모달창 */
+/* Best 축제 영역 */
