--- a/Gwangju/Desgin/style.css
+++ b/Gwangju/Desgin/style.css
@@ -443,3 +443,180 @@ nav{
 }
 /* 축제 모달창 */
 /* Best 축제 영역 */
+/* 축제 찾기 영역 */
+.search_area{
+    position: relative;
+    margin-top: 200px;
+    width: 100%;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    background-color: beige;
+}
+
+.search_area h1{
+    position: absolute;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.search{
+    margin-top: 50px;
+    width: 1440px;
+    height: 800px;
+}
+
+.search_box{
+    position: relative;
+    width: 100%;
+    height: 150px;
+}
+
+.search_box input{
+    padding-left: 10px;
+    width: 250px;
+    height: 40px;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 18px;
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
+
+.search_box select{
+    width: 200px;
+    height: 40px;
+    font-size: 18px;
+    margin-top: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.content{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card{
+    position: relative;
+    width: 450px;
+    height: 250px;
+    padding: 5px;
+    background-color: #fff;
+    border-radius: 20px;
+}
+
+.card img{
+    margin-left: 100px;
+    width: 250px;
+    height: 250px;
+}
+
+.card h3{
+    margin-top: 20px;
+    padding: 5px;
+}
+
+.card p{
+    padding: 5px;
+}
+
+.card button{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #111;
+    color: #fff;
+    font-weight: 900;
+    float: right;
+}
+
+.search_btn_area{
+    width: 1440px;
+    height: 60px;
+    display: flex;
+    margin-left: 10px;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.prev, .next{
+    width: 100px;
+    height: 40px;
+    border: 1px solid black;
+    background-color: #fff;
+    font-weight: 600;
+    border-radius: 5px;
+    margin: 5px;
+    font-size: 18px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1300px;
+    height: 600px;
+    display: flex;
+}
+
+.modal-content img{
+    width: 600px;
+    height: 600px;
+    border-radius: 10px;
+}
+
+.modal-content h1{
+    margin-top: 25px;
+    padding: 10px;
+    padding-left: 30px;
+    margin-bottom: 15px;
+}
+
+.modal-content p{
+    padding: 10px;
+    padding-left: 30px;
+    font-size: 18px;
+}
+
+.close-button {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 48px;
+    cursor: pointer;
+}
+
+.modal_btn_area{
+    position: absolute;
+    bottom: 20px;
+    right: 0;
+    width: 300px;
+}
+
+.modal_btn_area button{
+    padding: 5px 10px;
+    background-color: #fff;
+    border: 1px solid black;
+
+}
+/* 축제 찾기 영역 */
