--- a/Gwangju/Desgin/style.css
+++ b/Gwangju/Desgin/style.css
@@ -448,7 +448,7 @@ nav{
     position: relative;
     margin-top: 200px;
     width: 100%;
-    height: 800px;
+    height: 900px;
     display: flex;
     justify-content: center;
     background-color: beige;
@@ -521,6 +521,7 @@ nav{
 }
 
 .card p{
+    margin-top: 10px;
     padding: 5px;
 }
 
@@ -620,3 +621,63 @@ nav{
 
 }
 /* 축제 찾기 영역 */
+
+/* 푸터 영역 */
+.footer_area{
+    width: 100%;
+    height: 150px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+}
+
+footer{
+    width: 1440px;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    color: #555;
+    align-items: center;
+}
+
+.logo{
+    width: 300px;
+    height: 150px;
+    line-height: 150px;
+}
+
+footer p{
+    font-size: 20px;
+}
+
+.icon_area{
+    width: 330px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.icon{
+    width: 100px;
+    height: 110px;
+}
+
+.icon img{
+    width: 100px;
+    height: 100px;
+    filter: grayscale(100%);
+}
+
+.icon img:hover{
+    transition: all 0.5s;
+    filter: grayscale(0);
+}
+
+.icon p{
+    width: 100px;
+    height: 10px;
+    font-size: 11px;
+    text-align: center;
+}
+/* 푸터 영역 */
