--- a/Gwangju/Desgin/style.css
+++ b/Gwangju/Desgin/style.css
@@ -39,7 +39,7 @@ header{
 }
 
 nav{
-    width: 800px;
+    width: 720px;
     height: 100%;
 }
 
@@ -50,11 +50,11 @@ nav{
 }
 
 .menu li{
-    width: 200px;
+    width: 180px;
     height: 100%;
     text-align: center;
     line-height: 100px;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 900;
     cursor: pointer;
 }
@@ -68,12 +68,17 @@ nav{
 .sgin_area label{
     width: 100px;
     height: 100%;
-    font-size: 22px;
+    font-size: 18px;
     line-height: 100px;
     font-weight: 900;
     text-align: center;
     cursor: pointer;
     display: block;
+    color: gray;
+}
+
+.sgin_area label:hover{
+    color: black;
 }
 
 /* 로그인 모달 */
@@ -343,9 +348,9 @@ nav{
 .title span{
     padding: 5px;
     background-color: #FF8484;
-    border-radius: 10px;
+    border-radius: 5px;
     color: #fff;
-    font-weight: 600;
+    font-size: 12px;
 }
 
 .festa_card p{
@@ -621,7 +626,48 @@ nav{
 
 }
 /* 축제 찾기 영역 */
+/* 이달의 축제 영역 */
+.calender_area{
+    width: 100%;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+}
 
+.calender{
+    position: relative;
+    width: 1440px;
+    height: 100%;
+}
+
+.calender h1{
+    text-align: center;
+    line-height: 70px;
+}
+
+.table{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    border-collapse: collapse;
+    border: 0.5px solid black;
+}
+
+.table ul{
+    display: flex;
+}
+
+.table ul li{
+    width: 100px;
+    height: 100px;
+    border: 0.5px solid black;
+    padding: 10px;
+    font-size: 20px;
+}
+.red{color: #F86B4F;}
+.blue{color: #37A3FF;}
+.gray{color: gray;}
+/* 이달의 축제 영역 */
 /* 푸터 영역 */
 .footer_area{
     width: 100%;
