--- a/Gwangju/Desgin/style.css
+++ b/Gwangju/Desgin/style.css
@@ -629,7 +629,7 @@ nav{
 /* 이달의 축제 영역 */
 .calender_area{
     width: 100%;
-    height: 800px;
+    height: 850px;
     display: flex;
     justify-content: center;
 }
@@ -650,7 +650,9 @@ nav{
     left: 50%;
     transform: translateX(-50%);
     border-collapse: collapse;
-    border: 0.5px solid black;
+    border: 1.5px solid #ddd;
+    border-radius: 30px;
+    padding: 10px;
 }
 
 .table ul{
@@ -658,11 +660,21 @@ nav{
 }
 
 .table ul li{
-    width: 100px;
+    width: 90px;
     height: 100px;
-    border: 0.5px solid black;
     padding: 10px;
     font-size: 20px;
+    border-left: 5px solid #fff;
+    border-right: 5px solid #fff;
+}
+
+.table ul li p{
+    font-size: 14px;
+    line-height: 30px;
+    color: #111;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .red{color: #F86B4F;}
 .blue{color: #37A3FF;}
