--- a/Gyeonggi/Desgin/style.css
+++ b/Gyeonggi/Desgin/style.css
@@ -14,8 +14,8 @@ ul li{
 }
 
 .highlight{
-    background-color: #F7C537;
-    color: #fff;
+    color: #1078D4;
+    font-weight: bold;
 }
 
 /* 헤더 영역 */
@@ -89,6 +89,7 @@ nav{
     font-weight: 100;
     z-index: 2;
     padding-left: 10px;
+    font-size: 22px;
 }
 
 .sub_menu01{
