--- a/Gyeonggi/Desgin/style.css
+++ b/Gyeonggi/Desgin/style.css
@@ -68,7 +68,7 @@ nav{
 
 .main_menu > li{
     position: relative;
-    width: 150px;
+    padding: 0 40px;
     height: 100px;
     text-align: center;
     line-height: 100px;
@@ -99,11 +99,11 @@ nav{
 }
 
 .sub_menu01{
-    margin-left: 20px;
+    margin-left: -30px;
 }
 
 .sub_menu02{
-    margin-left: 0px;
+    margin-left: -20px;
 }
 
 .sub_menu li{
