--- a/Gyeonggi/Desgin/style.css
+++ b/Gyeonggi/Desgin/style.css
@@ -213,8 +213,9 @@ nav{
     border-radius: 15px;
     background: rgba(0, 0, 0, 0.7);
     position: absolute;
-    top: 10px;
-    right: 250px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 20px;
     color: #fff;
     z-index: 1;
     text-align: center;
@@ -697,7 +698,7 @@ footer{
 
 .danger_content{
     width: 1300px;
-    height: 300px;
+    height: 350px;
     padding: 35px 70px;
     border: 1px dashed #ff9108;
     border-radius: 20px;
@@ -705,7 +706,8 @@ footer{
 
 .danger_content h1{
     width: 100%;
-    height: 60px;
+    height: 100px;
+    font-size: 44px;
 }
 
 .danger_content div{
