--- a/Gyeonggi/Desgin/course.css
+++ b/Gyeonggi/Desgin/course.css
@@ -14,8 +14,8 @@ ul li{
 }
 
 .highlight{
-    background-color: #F7C537;
-    color: #fff;
+    color: #1078D4;
+    font-weight: bold;
 }
 
 /* 헤더 영역 */
@@ -38,10 +38,15 @@ header{
 }
 
 .logo{
-    width: 200px;
-    height: 100px;
+    width: 200PX;
+    height: 85px;
     text-align: center;
-    line-height: 100px;
+    margin-left: 10px;
+}
+
+.logo img{
+    width: 100%;
+    height: 100%;
 }
 
 .logo:hover{
@@ -63,7 +68,7 @@ nav{
 
 .main_menu > li{
     position: relative;
-    width: 150px;
+    padding: 0 40px;
     height: 100px;
     text-align: center;
     line-height: 100px;
@@ -75,13 +80,13 @@ nav{
 }
 
 .main_menu > li:hover .sub_menu{
-    height: 300px;
+    height: 180px;
 }
 
 .sub_menu{
     transition: all 0.5s;
     position: absolute;
-    width: 320px;
+    width: 260px;
     height: 0;
     overflow: hidden;
     text-align: left;
@@ -89,19 +94,21 @@ nav{
     font-weight: 100;
     z-index: 2;
     padding-left: 10px;
+    font-size: 20px;
+    border-radius: 10px;
 }
 
 .sub_menu01{
-    margin-left: 40px;
+    margin-left: -30px;
 }
 
 .sub_menu02{
-    margin-left: 20px;
+    margin-left: -20px;
 }
 
 .sub_menu li{
-    width: 300px;
-    line-height: 100px;
+    width: 260px;
+    line-height: 60px;
 }
 
 .sub_menu li:hover{
@@ -120,30 +127,29 @@ nav{
     width: 80px;
     height: 80px;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
+    color: #888;
+}
+
+.login_btn i{
+    margin-top: 20px;
 }
 
 .login_btn:hover, .join_btn:hover{
     cursor: pointer;
-}
-
-.login_btn img{
-    margin-top: 20px;
-    width: 20px;
-    height: 20px;
+    color: #111;
 }
 
 .join_btn{
     width: 80px;
     height: 80px;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
+    color: #888;
 }
 
-.join_btn img{
+.join_btn i{
     margin-top: 20px;
-    width: 20px;
-    height: 20px;
 }
 /* 헤더 영역 */
 /* 코스 소개 페이지 */
@@ -329,11 +335,12 @@ footer{
 
 .footer_logo{
     width: 200px;
-    height: 100%;
-    text-align: left;
-    line-height: 100px;
-    font-size: 28px;
-    font-weight: bolder;
+    height: 85px;
+    display: flex;
+    align-items: center;
+}
+.footer_logo img{
+    filter: grayscale(100%);
 }
 
 .copy{
