--- a/Gyeonggi/test/style.css
+++ b/Gyeonggi/test/style.css
@@ -316,6 +316,55 @@ nav{
     filter: brightness(50%);
 }
 /* 공지사항 영역 */
+/* 갤러리 영역 */
+.gall_area{
+    width: 100%;
+    height: 1000px;
+    scroll-snap-type: y mandatory;
+    overflow: auto;
+}
+
+.gall_area::-webkit-scrollbar{
+    display: none;
+}
+
+.gall{
+    position: relative;
+    width: 100%;
+    height: 1000px;
+    scroll-snap-align: start;
+}
+
+.gall_img{
+    width: 100%;
+    height: 100%;
+}
+
+.gall_txt{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1200px;
+    height: 450px;
+}
+
+.gall p{
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    font-size: 70px;
+    font-weight: bold;
+    animation: infinite linear 3s p;
+}
+
+@keyframes p{
+    0%, 100%{bottom: 40px;}
+    50%{bottom: 20px;}
+}
+/* 갤러리 영역 */
 /* 푸터 영역 */
 .footer_area{
     width: 100%;
