--- a/Gyeonggi/test/style.css
+++ b/Gyeonggi/test/style.css
@@ -215,17 +215,116 @@ nav{
 }
 /* 비주얼 영역 */
 /* 공지사항 영역 */
+
 .notice_area{
+    position: relative;
     width: 100%;
-    height: 700px;
+    height: 900px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.bubble1{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.3;
+    position: absolute;
+    top: -50px;
+    right: 150px;
+}
+
+.bubble2{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.5;
+    position: absolute;
+    top: 170px;
+    right: 190px;
+}
+
+.bubble3{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.75;
+    position: absolute;
+    top: 100px;
+    right: 350px;
+}
+
+.bubble4{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.8;
+    position: absolute;
+    top: 30px;
+    right: 430px;
+}
+
+.bubble5{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.3;
+    position: absolute;
+    bottom: -50px;
+    left: 150px;
+    z-index: 1;
+}
+
+.bubble6{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.5;
+    position: absolute;
+    bottom: 170px;
+    left: 190px;
+}
+
+.bubble7{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.75;
+    position: absolute;
+    bottom: 100px;
+    left: 350px;
+}
+
+.bubble8{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #1074DD;
+    border: 2px solid #fff;
+    opacity: 0.8;
+    position: absolute;
+    bottom: 30px;
+    left: 430px;
+}
+
 .notice{
     width: 1440px;
-    height: 400px;
+    height: 500px;
 }
 
 .notice label{
